impl ingress QoS
Signed-off-by: l1b0k <libokang.lbk@alibaba-inc.com>

--- a/charts/terway-qos/templates/daemonset.yaml
+++ b/charts/terway-qos/templates/daemonset.yaml
@@ -42,6 +42,8 @@ spec:
           command:
             - 'qos'
             - 'd'
+            - --enable-ingress
+            - --enable-egress
           volumeMounts:
             - mountPath: /sys/fs/bpf
               name: bpffs
