fix mount bpf fs
Signed-off-by: l1b0k <libokang.lbk@alibaba-inc.com>

--- a/charts/terway-qos/templates/daemonset.yaml
+++ b/charts/terway-qos/templates/daemonset.yaml
@@ -25,6 +25,7 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       hostNetwork: true
+      hostPID: true
       initContainers:
         - name: init
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
