support file config
Signed-off-by: l1b0k <libokang.lbk@alibaba-inc.com>

--- a/charts/terway-qos/templates/daemonset.yaml
+++ b/charts/terway-qos/templates/daemonset.yaml
@@ -45,6 +45,7 @@ spec:
             - 'd'
             - --enable-ingress
             - --enable-egress
+            - --enable-k8s
           volumeMounts:
             - mountPath: /sys/fs/bpf
               name: bpffs
