--- a/images/runtime/Dockerfile
+++ b/images/runtime/Dockerfile
@@ -1,4 +1,4 @@
-ARG LLVM_IMAGE=registry.cn-hangzhou.aliyuncs.com/l1b0k/cilium-llvm:a8c542efc076b62ba683e7699c0013adb6955f0f-wip
+ARG LLVM_IMAGE=quay.io/cilium/cilium-llvm:547db7ec9a750b8f888a506709adb41f135b952e@sha256:4d6fa0aede3556c5fb5a9c71bc6b9585475ac9b1064f516d4c45c8fb691c9d9e
 ARG UBUNTU_IMAGE=docker.io/library/ubuntu:22.04@sha256:2b7412e6465c3c7fc5bb21d3e6f1917c167358449fecac8176c6e496e5c1f05f
 
 FROM  ${LLVM_IMAGE} as llvm-dist
